# Ota-zeroshot-filter

./: .gitignore  README.md  pyproject.toml  run.sh  venv.sh  zeroshot_classify.sh  zeroshot_metrics.txt
src/: csv2markdown.py  outline_sample.py  sample.py  split_toxicity_dataset.py  utils.py  zeroshot_classify.py
